# versioned-polymorphic-buffers

./: .gitignore  LICENSE  README.md
vpbuf/: notes.txt
vpbuf/compiler/: CMakeLists.txt
vpbuf/compiler/src/: shared_header.h  vpc.cc  vpc.h
vpbuf/compiler/src/pod/: pod_map.cc  pod_map.h  pod_reorder_string.cc  pod_reorder_string.h  pod_salt.cc  pod_salt.h  pod_string.cc  pod_string.h  pod_typed.cc  pod_typed.h  pod_varint.cc  pod_varint.h  pod_vector.cc  pod_vector.h
vpbuf/compiler/src/vp_typedef/: vp_typedef.h  vp_typedef_character.cc  vp_typedef_character.h  vp_typedef_pod.cc  vp_typedef_pod.h  vp_typedef_poly.cc  vp_typedef_poly.h  vp_typedef_reorder_pod.cc  vp_typedef_reorder_pod.h  vp_typedef_string.cc  vp_typedef_string.h  vp_typedef_varint.cc  vp_typedef_varint.h  vp_typedef_vector.cc  vp_typedef_vector.h
vpbuf/examples/poker/: run_all.sh  run_r1.sh  run_r2.sh  setup_all.sh
vpbuf/examples/poker/rel1/: poker.vpc
vpbuf/examples/poker/rel1/python/: draw.py  stack.py
vpbuf/examples/poker/rel2/: poker.vpc
vpbuf/examples/poker/rel2/cpp/: CMakeLists.txt
vpbuf/examples/poker/rel2/python/: draw.py  (+1 more)
vpbuf/examples/scrambler/: scram.vpc
vpbuf/examples/uno/: setup_all.sh  uno.vpc  vp_uno.py
vpbuf/examples/uno/rel1/: uno.vpc
vpbuf/tests/: do_all.sh
vpbuf/tests/maps/: check_all.sh  maps.vpc  run_all.sh  setup_all.sh
vpbuf/tests/maps/cpp/: CMakeLists.txt
vpbuf/tests/maps/python/: maps.py
vpbuf/tests/vectors/: check_all.sh  run_all.sh  setup_all.sh  vectors.vpc
vpbuf/tests/vectors/cpp/: CMakeLists.txt
vpbuf/tests/vectors/python/: vectors.py
(+73 files in other folders)
